fix: Make overflow-x hidden for section tag to fix horizontal whitespace on phone screens

--- a/index.css
+++ b/index.css
@@ -12,6 +12,10 @@ body {
   overflow-x: hidden;
 }
 
+section {
+  overflow-x: hidden;
+}
+
 li {
   list-style-type: none;
 }
